# stake-scrapper

./: .dockerignore  Dockerfile  README.md  deploy-railway.sh  deploy.sh  fly.toml  pyproject.toml
app/: config.py  database.py  main.py  models.py  parsers.py  routes.py  schemas.py  scraper.py  scrappey_pool.py  stake_queries.py
frontend_dist/: index.html
frontend_dist/assets/: index-Z21eIxMK.js  index-vaTN31nY.css
