[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.136.1"}
psycopg = {extras = ["binary"], version = "^3.3.4"}
sqlalchemy = "^2.0.49"
aiosqlite = "^0.22.1"
httpx = "^0.28.1"
apscheduler = "^3.11.2"
pydantic-settings = "^2.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
